--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,31 @@
 {
   "version": 2,
   "builds": [
-    { "src": "client", "use": "@vercel/static" },
-    { "src": "server", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "server/$1" },
     {
-      "src": "/(.*)",
-      "dest": "client/public/$1",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
+      "src": "server/index.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "buildCommand": "yarn build",
+        "outputDirectory": "dist"
       }
     }
-  ]
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "server/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "client/dist/$1"
+    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  },
+  "functions": { }
 }
